--- a/src-ui/css/input.css
+++ b/src-ui/css/input.css
@@ -37,6 +37,10 @@
     scrollbar-width: none;
   }
 
+  .scrollbar-w-thin {
+    scrollbar-width: thin;
+  }
+
   input[type="search"]::-webkit-search-cancel-button,
   input[type="search"]::-webkit-search-decoration {
     -webkit-appearance: none;
